no longer stretching delete / drag button

--- a/src/react/list/item/ListItem.scss
+++ b/src/react/list/item/ListItem.scss
@@ -6,6 +6,7 @@
   border-bottom: 1px solid #afafaf;
   margin: 6px 0;
   justify-content: flex-start;
+  align-items: center;
   padding: 6px 12px;
   background-color: $app-white;
 
